fix: layout issues, because of removing scaleAnimation.

--- a/src/styles.css
+++ b/src/styles.css
@@ -926,6 +926,9 @@ input[type="checkbox"] {
   .notesButtonDivGrid {
     padding-top: 20px;
   }
+  #statisticsBorderGridNotes {
+    padding-top: 20px;
+  }
 }
 
 @media (max-width: 790px) {
@@ -945,8 +948,8 @@ input[type="checkbox"] {
 
   .statsField,
   .statsFieldFromMonth {
-    height: 50px;
-    width: 50px;
+    height: 55px;
+    width: 55px;
   }
 
   #checkBoxes {
@@ -1052,8 +1055,8 @@ input[type="checkbox"] {
 
   .statsField,
   .statsFieldFromMonth {
-    height: 45px;
-    width: 45px;
+    height: 50px;
+    width: 50px;
   }
 
   #statisticField {
@@ -1086,6 +1089,10 @@ input[type="checkbox"] {
   #checkBoxesGridArea #happy,
   #checkBoxesGridArea #sad {
     bottom: 51px;
+  }
+
+  #statisticsBorderGridNotes {
+    padding-top: 30px;
   }
 }
 
@@ -1154,8 +1161,8 @@ input[type="checkbox"] {
 
   .statsField,
   .statsFieldFromMonth {
-    height: 36px;
-    width: 36px;
+    height: 43px;
+    width: 43px;
   }
   #textContainerToday p {
     font-size: 18px;
